--- a/UIDesign/pom.xml
+++ b/UIDesign/pom.xml
@@ -15,6 +15,26 @@
             <artifactId>javafx-controls</artifactId>
             <version>13</version>
         </dependency>
+        
+       <!-- https://mvnrepository.com/artifact/com.spotify/docker-client -->
+<dependency>
+    <groupId>com.spotify</groupId>
+    <artifactId>docker-client</artifactId>
+    <version>8.16.0</version>
+    <type>jar</type>
+</dependency>
+
+        
+   
+     <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
+     <dependency>
+    <groupId>com.jcraft</groupId>
+    <artifactId>jsch</artifactId>
+    <version>0.1.55</version>
+     </dependency>
+
+
+        
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
@@ -35,6 +55,14 @@
             <artifactId>maven-jar-plugin</artifactId>
             <version>3.3.0</version>
         </dependency>
+       
+        <!-- https://mvnrepository.com/artifact/com.spotify/docker-client -->
+<dependency>
+    <groupId>com.spotify</groupId>
+    <artifactId>docker-client</artifactId>
+    <version>8.16.0</version>
+    <type>jar</type>
+</dependency>
     </dependencies>
     <build>
         <plugins>
